Change the headline, small fix for width on mobile

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -18,6 +18,11 @@ body {
   position: absolute;
   left: -50%;
   top: -50%;
-  width: 200%;
+  width: 250%;
+  min-width: 1500px;
   height: 200%;
+
+  @media screen and (min-width: 768px) {
+    width: 200%;
+  }
 }
